[project]
name = "portctl"
version = "0.1.0"
description = "Manage your ports"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "psutil>=5.9",
    "rich>=13.0",
    "typer>=0.9",
]

[project.scripts]
portctl = "portctl.cli:_cli_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portctl"]
