[project]
name = "portctl"
version = "0.1.1"
description = "Manage your ports — view, inspect, and kill processes on TCP ports"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Mubbie Idoko"},
]
keywords = ["ports", "cli", "devtools", "process", "network"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
dependencies = [
    "psutil>=5.9",
    "rich>=13.0",
    "typer>=0.9",
]

[project.urls]
Homepage = "https://github.com/mubbie/portctl"
Repository = "https://github.com/mubbie/portctl"
Issues = "https://github.com/mubbie/portctl/issues"

[project.scripts]
portctl = "portctl.cli:_cli_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portctl"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
